# skillsandbox

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  LICENSE  README.md  docker-demo.sh
.github/workflows/: ci.yml
examples/skills/malicious-weather/: ATTACK.md  expected-trace.json  main.py  setup-victim-env.sh  skillsandbox.yaml  trace.json
examples/skills/weather/: main.py  skillsandbox.yaml
src/: lib.rs  main.rs  runner.rs
src/cli/: commands.rs
src/enforcer/: env_filter.rs  filesystem.rs  mod.rs  network.rs  seccomp.rs
src/manifest/: parser.rs
src/mcp/: mod.rs  server.rs
src/tracer/: classify.rs  mod.rs  otel.rs  trace.rs
