[package]
name = "skillsandbox"
version = "0.1.0"
edition = "2021"
description = "Capability-based sandbox runtime for AI agent skills"
license = "Apache-2.0"
repository = "https://github.com/theMachineClay/skillsandbox"
keywords = ["sandbox", "ai-agents", "security", "mcp", "capabilities"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skillsandbox"
path = "src/main.rs"

[dependencies]
# Manifest parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs for trace spans
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Network egress enforcement (iptables wrapper)
# We shell out to `iptables` for the MVP; no extra crate needed.

# seccomp-bpf syscall filtering (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
